src/components/project-item/styles.css
.project {
    align-items: center;
    display: grid;
    justify-content: center;
    margin: 15px auto 0;
}


h2, h3 {
    color: rgb(0,0,0);
    font-weight: 400;
    line-height: 1.75em;
    margin: 10px auto 30px;
    text-align: center;
    text-transform: uppercase;
}

h3.year {
    color: rgb(90,90,90)
}


p {
    line-height: 1.8em;
}


.project-content > .description {
    text-align: justify;
}


.category {
    text-align: center;
}


.resources {
    color: rgb(110,110,110);
    margin-bottom: 55px;
    text-align: center;
}


.projectlink {
    margin: 40px auto 10px;
    text-align: center;
}

    .projectlink a::after {
        content: " ↗";
    }

    .projectlink.disabled, .projectlink.disabled a {
        color: rgb(200,200,200);
        cursor: default;
    }

    .projectlink.disabled span {
        text-decoration: underline;
        font-style: italic;
    }


.project-screen {
    max-width: 730px;
    text-align: center;
}

    .project-screen img {
        border: 1px solid rgb(210,210,210);
        box-shadow: 0 3px 10px rgba(0,0,0,0.1);
        border-radius: 10px;
        margin: 20px auto 15px;
        max-width: 95%;
        max-height: 420px;
    }


button.close-project {
    background: rgb(230,230,230);
    border: none;
    border-radius: 50%;
    height: 45px;
    margin: 25px auto 10px;
    position: relative;
    width: 45px;
}

    button.close-project:after {
        color: rgb(90,90,90);
        content: "×";
        cursor: pointer;
        font-size: 36px;
        left: 0;
        position: absolute;
        top: calc(50% - 20px);
        width: 100%;
    }


@media (max-width: 900px) {
    .project {
        padding: 60px 15px 20px;
        margin-top: 0;
    }
    
    .project-screen {
        justify-self: center;
        width: 100%;
    }

    .project > div {
        grid-column: 1/8;
        text-align: center;
    }

    .project .projectlink {
        text-align: center;
    }

    .project-content {
        padding: 10px;
        max-width: none;
    }

    button.close-project {
        bottom: 95px;
        grid-column: 4/4;
        left: calc(50vw - 22.5px);
        position: fixed;
    }
}

